# AIRA

./: .env.example  .gitignore  Dockerfile  Dockerfile.postgres  README.md  config.yaml  docker-compose.yml  init.sql  main.py  pyproject.toml  streamlit_app.py  worker.py
src/: __init__.py
src/adapters/: __init__.py
src/adapters/agents/: __init__.py  langgraph_agent.py
src/adapters/api/: dependencies.py  routes.py
src/adapters/embeddings/: __init__.py  mock_embeddings.py  openai_embeddings.py
src/adapters/financial/: __init__.py  mock_financial.py  yfinance_client.py
src/adapters/jobs/: __init__.py  arq_worker.py  scheduler.py
src/adapters/llm/: __init__.py  claude_provider.py  mock_llm.py
src/adapters/news/: __init__.py  mock_news.py  newsapi_client.py
src/adapters/search/: __init__.py  duckduckgo_client.py  mock_search.py
src/adapters/storage/: __init__.py  memory_repository.py  postgres_repository.py
src/application/: __init__.py
src/application/ports/: __init__.py  embeddings_port.py  financial_port.py  llm_port.py  news_port.py  search_port.py  storage_port.py
src/application/services/: __init__.py  embedding_service.py
src/config/: logging.py  settings.py
src/domain/: __init__.py  exceptions.py  models.py
src/tools/: __init__.py  data_fetcher.py  news_retriever.py  sentiment_analyzer.py  web_researcher.py
tests/: __init__.py  conftest.py
tests/api/: test_endpoints.py  test_search_endpoint.py
tests/integration/: test_agent.py  test_financial_providers.py  test_monitoring_api.py  test_news_providers.py  test_reflection.py  test_search_providers.py
tests/unit/: test_embedding_service.py  test_models.py  test_tools.py  test_web_researcher.py
