[project]
name = "aira"
version = "1.0.0"
description = "A.I.R.A. - Autonomous Investment Research Agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "A.I.R.A. Team" }]

dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",

    # Agent Framework
    "langgraph",
    "langchain",
    "langchain-core",

    # LLM Providers
    "anthropic",
    "openai",

    # Async HTTP Client
    "httpx",
    "aiohttp",

    # Financial Data
    "yfinance",

    # Web Search
    "ddgs",

    # Database
    "asyncpg",
    "sqlalchemy[asyncio]",
    "alembic",
    "pgvector",

    # Redis & Job Queue
    "redis",
    "arq",

    # Scheduler
    "apscheduler",

    # Logging
    "structlog",

    # Configuration
    "pyyaml",
    "python-dotenv",

    # UI
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",

    # Linting & Formatting
    "black",
    "isort",
    "mypy",
    "ruff",

    # Type stubs
    "types-pyyaml",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",

    # Linting & Formatting
    "black",
    "isort",
    "mypy",
    "ruff",

    # Type stubs
    "types-pyyaml",
    "types-redis",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "alembic"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic", ".venv"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
